--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,8 @@ dependencies:
   http: ^0.13.0
   meta: ^1.7.0
   rxdart_ext: ^0.2.5
-  cancellation_token_hoc081098:
+  cancellation_token_hoc081098: ^1.0.0-beta.1
 
 dev_dependencies:
   lints: ^1.0.1
   test: ^1.17.12
-
-dependency_overrides:
-  cancellation_token_hoc081098:
-    path: ../cancellation_token_hoc081098
