--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,5 +19,6 @@ dev_dependencies:
   test: ^1.17.12
   mockito: ^5.2.0
   build_runner: ^2.1.2
+  collection: ^1.15.0
 
 #  dart run build_runner build --delete-conflicting-outputs
