--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,15 +4,15 @@ publish_to: none
 version: 1.0.0-dev.0
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: ^3.3.0
 
 dependencies:
-  http: ^0.13.5
+  http: ^1.2.2
   http_client_hoc081098:
-  cancellation_token_hoc081098: ^1.0.0
+  cancellation_token_hoc081098: ^2.0.0
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^4.0.0
 
 dependency_overrides:
   http_client_hoc081098:
