--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,19 +8,19 @@ funding:
   - https://www.buymeacoffee.com/hoc081098
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^3.0.0
 
 dependencies:
-  http: ^0.13.0
+  http: ^1.1.0
   meta: ^1.7.0
-  rxdart_ext: ^0.2.0
-  cancellation_token_hoc081098: ^1.0.0
+  rxdart_ext: ^0.3.0
+  cancellation_token_hoc081098: ^2.0.0
 
 dev_dependencies:
-  lints: ^1.0.1
-  test: ^1.17.12
-  mockito: ^5.2.0
-  build_runner: ^2.1.2
-  collection: ^1.15.0
+  lints: ^3.0.0
+  test: ^1.17.15
+  mockito: ^5.4.2
+  build_runner: ^2.4.9
+  collection: ^1.18.0
 
 #  dart run build_runner build --delete-conflicting-outputs
