--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,13 +19,13 @@ jobs:
 
     strategy:
       matrix:
-        sdk: [ beta, stable, 2.15.0, 2.12.0 ]
+        sdk: [ beta, stable, 3.0.0 ]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Dart
-        uses: dart-lang/setup-dart@v1.3
+        uses: dart-lang/setup-dart@v1.6.5
         with:
           sdk: ${{ matrix.sdk }}
 
@@ -58,4 +58,8 @@ jobs:
       - name: Format coverage
         run: dart pub global run coverage:format_coverage --lcov --in=coverage.json --out=lcov.info --report-on=lib
 
-      - uses: codecov/codecov-action@v3.1.0
+      - uses: codecov/codecov-action@v4.5.0
+        with:
+          fail_ci_if_error: true # optional (default = false)
+          token: ${{ secrets.CODECOV_TOKEN }} # required
+          verbose: true # optional (default = false)
